src/objects/Contact_Card__c.object
<CustomObject>
    <fields>
        <fullName>Boutique__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Boutique</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Contact Cards</relationshipLabel>
        <relationshipName>Contact_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contact Cards</relationshipLabel>
        <relationshipName>Contact_Cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lingua__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nazionalita__c</fullName>
        <label>Nationality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_text__c</fullName>
        <label>Other Channel:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonBirthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PersonEmail__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMailingCity__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMailingCountry__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMailingPostalCode__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMailingState__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMailingStreet__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMobilePhone__c</fullName>
        <label>Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privacy1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consenso marketing BC spa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privacy2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consenso marketing BC group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privacy3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consenso profilazione</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privacy_Registration_Date__c</fullName>
        <label>Privacy Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sesso__c</fullName>
        <label>Gender</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WeChat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WeChat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>We_Chat_ID__c</fullName>
        <label>We Chat ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contact Card</label>
    <nameField>
        <displayFormat>Card-{0000}</displayFormat>
        <label>Contact Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>